[package]
name = "process-tree"
version = "0.1.0"
edition = "2021"
description = "Process tree inspection utilities built on windows-rs."
repository = "https://github.com/kyle-rader/process-tree"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.17"
anyhow = "1.0.100"
windows = { version = "0.62", features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_ToolHelp",
] }
